fix navbar on mobile devices

--- a/app.css
+++ b/app.css
@@ -34,6 +34,8 @@ p {
 	font-size: 20px;
 }
 
-
+.collapse:not(.show) {
+  display: block;
+}
 
 
